--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/Puzzel/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Puzzel</title>
+  <script type="module" crossorigin src="/Puzzel/assets/index.3ebd339c.js"></script>
+  <link rel="stylesheet" href="/Puzzel/assets/index.8adfde03.css">
 </head>
 
 <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    
 </body>
 
 </html>
